# JetAnalysor

./: .gitignore  CMakeLists.txt  README.md  calc.cpp  main.cpp  mpi_parallel_read_file.cpp  mpi_study.cpp  mpi_test.cpp  preprocessing_hepmc.cpp  runLBT.cpp
cmake/: FindFastjet.cmake  FindHepMC.cmake  FindLBT.cmake
include/: calcDeltaPhiDist.h  distCalculator.h  histo.hh  jetSelector.h  output.h  utils.h  writeHepMC2.h
